Devops/k8s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: DevSecJobs-ingress
  namespace: DevSecJobs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devsecjobs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api.devsecjobs.local
    http:
      paths:            
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5001
